# ampl_seq

./: Cargo.toml  LICENSE
src/: cli.rs  main.rs  process.rs
src/cli/: cli_model.rs  config.rs  init_log.rs
src/cli/config/: getters.rs  mk_config.rs
src/process/: align.rs  counts.rs  fastq.rs  process_threads.rs  read.rs  reader.rs  view.rs  write_view.rs
src/process/fastq/: fastq_iter.rs  fastq_record.rs  lines.rs
src/process/process_threads/: process_buffer.rs  process_thread.rs
src/process/reader/: buffer.rs
