[package]
name = "ampl_seq"
version = "0.4.3"
edition = "2024"

[dependencies]
log = "~0.4"
stderrlog = "~0.6"
anyhow = "~1.0"
num_cpus = "~1"
crossbeam-channel = "~0.5"
clap = { version = "~4", features = ["cargo"] }
compress_io = "~0.6"
rust_wfa2 = { git = "https://github.com/heathsc/rust_wfa2.git" }

